@@ -1,3 +1,5 @@
+* Added ActiveModel::Errors#added? to check if a specific error has been added [Martin Svalin]
+
 * Add ability to define strict validation(with :strict => true option) that always raises exception when fails [Bogdan Gusiev]
 
 * Deprecate "Model.model_name.partial_path" in favor of "model.to_partial_path" [Grant Hutchins, Peter Jaros]
